[project]
name = "spotifytolfm-py"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "pylast>=6.0.0",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.2",
    "spotipy[memcache]>=2.25.1",
]

[tool.pyright]
reportUnknownMemberType = false
reportUnknownVariableType = false